proxy/bovreg_svc+deployment+ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    ms: bovreg-back-end

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: back-end-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        ms: bovreg-back-end
    spec:
      containers:
      - name: bovreg-back-end
        image: alexeyebi/bovreg_proxy
        ports:
        - containerPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bovreg-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api(/|$)(.*)
        backend:
          serviceName: back-end-svc
          servicePort: 80
